groq for faster inference

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 OPENAI_API_KEY="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"
+GROQ_API_KEY="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"
